updated from thomas

--- a/todo
+++ b/todo
@@ -1,12 +1,6 @@
-click sur valider => confirm le don
-
-Navbar
-Footer
-
-Pages
-
-intégrer dashboard
-
 Liens pour page asso
+
+lien damien
+lien vers cerfa
 
 design
